(rule
 (targets short.output)
 (deps
  (package stanc)
  (:stanfiles
   (glob_files *.stan)))
 (action
  (with-stdout-to
   %{targets}
   (run
    %{project_root}/test/integration/run_bin_on_args.exe
    "%{bin:stanc} --auto-format --max-line-length=40"
    %{stanfiles}))))

(rule
 (alias runtest)
 (action
  (diff short.expected short.output)))

(rule
 (targets long.output)
 (deps
  (package stanc)
  (:stanfiles
   (glob_files *.stan)))
 (action
  (with-stdout-to
   %{targets}
   (run
    %{project_root}/test/integration/run_bin_on_args.exe
    "%{bin:stanc} --auto-format --max-line-length=120"
    %{stanfiles}))))

(rule
 (alias runtest)
 (action
  (diff long.expected long.output)))
