(rule
 (targets cpp.output)
 (deps (package stanc) (:stanfiles eight_schools_ncp.stan mother.stan))
 (action
  (with-stdout-to %{targets}
   (run %{bin:run_bin_on_args} "%{bin:stanc} --print-cpp" %{stanfiles}))))

(alias
 (name runtest)
 (action (diff cpp.expected cpp.output)))

(rule
 (targets mir.output)
 (deps (package stanc) (:stanfiles mother.stan))
 (action
  (with-stdout-to %{targets}
   (run %{bin:run_bin_on_args} "%{bin:stanc} --debug-mir" %{stanfiles}))))

(alias
 (name runtest)
 (action (diff mir.expected mir.output)))

(rule
 (targets tfp.output)
 (deps (package stanc) (:stanfiles eight_schools_ncp.stan))
 (action
  (with-stdout-to %{targets}
   (run %{bin:run_bin_on_args} "%{bin:stan2tfp}" %{stanfiles}))))

(alias
 (name runtest)
 (action (diff tfp.expected tfp.output)))